# SIMLD

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
apps/: CMakeLists.txt
apps/simldBuild/: CMakeLists.txt  NTriplesParser.cpp  main.cpp
apps/simldSearch/: CMakeLists.txt  main.cpp
include/SIMLD/: NTriplesParser.hpp  Range.hpp  Triple.hpp
